updated the style of the calculator

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
         <button id="ac" class="item span-two">AC</button>
         <button id="divide" class="item">/</button>
-        <button id="multiply" class="item">X</button>
+        <button id="multiply" class="item">x</button>
       
       
         <button id="sven" class="item">7</button>
