equal button functionality added, also managing operators at basic level

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <div class="container">
       <div id="display">
         <div class="whole-formula"></div>
-        <div class="current-number">2</div>    
+        <div class="current-number"></div>    
       </div>
       <button id="clear" class="item span-two">AC</button>
       <button id="divide" class="operators item">/</button>
-      <button id="multiply" class="operators item">x</button>
+      <button id="multiply" class="operators item">*</button>
       
       
       <button id="sven" class="number item">7</button>
