updateing readme file

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <button id="multiply" class="operators item">*</button>
       
       
-      <button id="sven" class="number item">7</button>
+      <button id="sevn" class="number item">7</button>
       <button id="eight" class="number item">8</button>
       <button id="nine" class="number item">9</button>
       <button id="subtract" class="operators item">-</button>
