added histroy log funtionality

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <button id="zero" class="number item span-two">0</button>
         <button id="decimal" class="number item">.</button>
       </div>
-      <div>
-        <h1>JavaScript Calculator</h1>
+      <div class="history-container">
+        <h1>History of calculations</h1>
         <div id="history">
           
         </div>
