replaced some div tags with semantic html tags to increase the accessibility

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <title>js calculator</title>
   </head>
   <body>
-    <div class="container">
-      <div class="calc-container">
+    <main class="container">
+      <section class="calc-container">
         <div id="display">
           <div class="whole-formula"></div>
           <div class="current-number"></div>    
@@ -42,14 +42,14 @@
         
         <button id="zero" class="number item span-two">0</button>
         <button id="decimal" class="number item">.</button>
-      </div>
-      <div class="history-container">
+      </section>
+      <section class="history-container">
         <h1>History of calculations</h1>
         <div id="history">
           
         </div>
-      </div>
-    </div>
+      </section>
+    </main>
 
     <script src="index.js"></script>
   </body>
