fix the chaining problem Relates #2

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
       </section>
       <section class="history-container">
         <h1>History of calculations</h1>
-        <div id="history">
+        <section id="history">
           
-        </div>
+        </section>
       </section>
     </main>
 
