--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <button id="multiply" class="operators item">*</button>
         
         
-        <button id="sevn" class="number item">7</button>
+        <button id="seven" class="number item">7</button>
         <button id="eight" class="number item">8</button>
         <button id="nine" class="number item">9</button>
         <button id="subtract" class="operators item">-</button>
@@ -52,5 +52,7 @@
     </main>
 
     <script src="index.js"></script>
+    <script src="test-helpers.js"></script>
+    <script src="index.test.js"></script>
   </body>
   </html>
